--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,15 +6,33 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row" *ngFor = "let satellite of satellites">
-        <td>{{satellite.name}}</td>
-        <td [class.warning]="satellite.isSpaceDebris()">{{satellite.type}}</td>
-        <td>{{satellite.operational}}</td>
-        <td>{{satellite.orbitType}}</td>
-        <td>{{satellite.launchDate}}</td>
-    </tr>
+
+    <ng-container *ngFor="let satellite of satellites">
+        <ng-container *ngIf="satellites.indexOf(satellite) % 2 === 0; else alternativeRowColor">
+            <tr class="data-row" [class.alternate]="true">
+                <td>{{satellite.name}}</td>
+                <td [class.warning]="satellite.isSpaceDebris()">{{satellite.type}}</td>
+                <td>{{satellite.operational}}</td>
+                <td>{{satellite.orbitType}}</td>
+                <td>{{satellite.launchDate}}</td>
+            </tr>
+        </ng-container>
+
+        <ng-template #alternativeRowColor>
+            <tr class="data-row">
+                <td>{{satellite.name}}</td>
+                <td [class.warning]="satellite.isSpaceDebris()">{{satellite.type}}</td>
+                <td>{{satellite.operational}}</td>
+                <td>{{satellite.orbitType}}</td>
+                <td>{{satellite.launchDate}}</td>
+            </tr>
+        </ng-template>
+        
+    </ng-container>
+
+
+
 </table>
 
 <!-- TODO 2b: use *ngFor to display satellite data in the table -->
 <!-- TODO 3b: add style directive to conditionally highlight satellite type -->
-
